Fix spacing bugs

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 			src=0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com&amp;
 			ctz=America%2FNew_York" style="border-width: 0; padding: 20px" width="90%" height="500" frameborder="0" scrolling="no"></iframe>
 		<p>
-		<a href="https://calendar.google.com/calendar/embed?src=0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com&ctz=America%2FNew_York">Google calendar link</a>
+		<a style="padding:20px" href="https://calendar.google.com/calendar/embed?src=0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com&ctz=America%2FNew_York">Google calendar link</a>
 		<p>
-		<a href="https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics">iCal link</a>
+		<a style="padding:20px" href="https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics">iCal link</a>
 
 		<h1 style="padding:20px">Other Maine Dances</h1>
 
