--- a/details.html
+++ b/details.html
@@ -13,32 +13,38 @@
 		<script data-goatcounter="https://cfcd.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 	</head>
 	<body>
-		<div>
-			<a href="/">❰ Home</a>
-		</div>
 
-		<iframe src="http://localhost:7024/api/Proxy?url=https://docs.google.com/document/d/e/2PACX-1vSz9cH1aF427AoqqOU56kdjFRR-FMkQFTVGlQGcgKoeXHYTE_CKi52BYPYymqHA3wVzgsdz27CC44XA/pub?embedded=true"
-			frameborder=0 style='height: 100%; width: 100%'>
-		</iframe>
+		<div style="padding:20px" data-source="http://localhost:7024/api/Proxy?url=https://docs.google.com/document/d/e/2PACX-1vQDy-NgLph_BKPmwloVuDQyxuRECjyR-DELQtD6IB-ACExMX8lCq-JPGb6p-9WvRDNHFpMm_P4XGyNf/pub?embedded=true">Loading...</div>
+		<div style="padding:20px; line-height: 1.5" data-source="http://localhost:7024/api/GetNextEvent?url=https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics">Loading...</div>
+		<!--<div style="padding:20px; line-height: 1.5" id="futureEventsDiv" data-source="http://localhost:7024/api/GetNextYear?url=https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics">Loading...</div>-->
 
-		<div style="padding:20px" id="nextEventDiv">Loading next event...</div>
+		<h1 style="padding:20px">Future Events</h1>
+
+		<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;mode=AGENDA&amp;height=500&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;
+			src=0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com&amp;
+			ctz=America%2FNew_York" style="border-width: 0; padding: 20px" width="90%" height="500" frameborder="0" scrolling="no"></iframe>
+
+		<h1 style="padding:20px">Other Maine Dances</h1>
+
+		<div style="padding:20px; line-height: 1.5" data-source="http://localhost:7024/api/GetOtherDances?state=ME">Loading...</div>
 
 		<script>
-			async function fetchCalendar() {
+			async function loadIn(element) {
 				try {
-					const response = await fetch('http://localhost:7024/api/GetNextEvent?url=https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics');
+					const response = await fetch(element.dataset.source);
 					if (!response.ok) {
 						throw new Error(`HTTP error! status: ${response.status}`);
 					}
 					const data = await response.text();
-					document.getElementById('nextEventDiv').innerHTML = data;
+					element.innerHTML = data;
 				} catch (error) {
-					console.error('Error fetching calendar:', error);
-					document.getElementById('nextEventDiv').innerHTML = 'Failed to load next event :(';
+					console.error('Error fetching ' + element.dataset.source, error);
+					element.innerHTML = 'Failed to load :(';
 				}
 			}
-			fetchCalendar();
-		</script>
 
+			const elements = document.querySelectorAll('[data-source]');
+			elements.forEach(element => loadIn(element));
+		</script>
 	</body>
 </html>
