--- a/booking.html
+++ b/booking.html
@@ -16,7 +16,7 @@
 		<div style="padding:20px" data-source="https://icalprocessor.azurewebsites.net/api/Proxy?url=https://docs.google.com/document/d/e/2PACX-1vTZfChpxTG533BKW-K1dCv2-E9c-g05oCE0vw_Sx7Fp56W6dyrmevySrQY5Sn96vW6bbOWxmab4wgWk/pub?embedded=true">
 		</div>
 
-		<div style="padding:20px; line-height: 1.5" data-source="https://icalprocessor.azurewebsites.net/api/GetNextYear?url=https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics">Loading...</div>
+		<div style="padding:20px; line-height: 1.5" data-source="https://icalprocessor.azurewebsites.net/api/GetNextYear?url=https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics&contains=tbd">Loading...</div>
 
 		<script>
 			async function loadIn(element) {
