Add variable months for getting summaries

--- a/booking.html
+++ b/booking.html
@@ -13,10 +13,10 @@
 		<script data-goatcounter="https://cfcd.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 	</head>
 	<body>
-		<div style="padding:20px" data-source="https://icalprocessor.azurewebsites.net/api/Proxy?url=https://docs.google.com/document/d/e/2PACX-1vTZfChpxTG533BKW-K1dCv2-E9c-g05oCE0vw_Sx7Fp56W6dyrmevySrQY5Sn96vW6bbOWxmab4wgWk/pub?embedded=true">
+		<div style="padding-left:20px; padding-top:20px " data-source="https://icalprocessor.azurewebsites.net/api/Proxy?url=https://docs.google.com/document/d/e/2PACX-1vTZfChpxTG533BKW-K1dCv2-E9c-g05oCE0vw_Sx7Fp56W6dyrmevySrQY5Sn96vW6bbOWxmab4wgWk/pub?embedded=true">
 		</div>
 
-		<div style="padding:20px; line-height: 1.5" data-source="https://icalprocessor.azurewebsites.net/api/GetNextYear?url=https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics&contains=tbd">Loading...</div>
+		<div style="padding-left:20px; line-height: 1.5" data-source="https://icalprocessor.azurewebsites.net/api/GetNextEventsSummaries?url=https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics&contains=tbd&months=6">Loading...</div>
 
 		<script>
 			async function loadIn(element) {
