--- a/index.html
+++ b/index.html
@@ -13,70 +13,72 @@
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="https://www.commonfloorcontra.dance"/>
 
-<!-- https://schema.pythonanywhere.com/DanceEvent -->
-<!-- https://validator.schema.org/ -->
+		<!-- https://schema.pythonanywhere.com/DanceEvent -->
+		<!-- https://validator.schema.org/ -->
  
-<script type="application/ld+json">
-{
-	"@type": "WebSite",
-	"url": "https://www.commonfloorcontra.dance",
-	"name": "Common Floor Contra Dance",
-	"keywords":"contra,dance,contradance,Portland,Maine",
-	"image":"https://www.commonfloorcontra.dance/logo.png",
-	"@context": "http://schema.org"
-}
-</script>
-
-<script type="application/ld+json">
-{
-	"@type": "Organization",
-	"name":"Common Floor Contra Dance",
-	"url":"https://www.commonfloorcontra.dance",
-	"email":"commonfloorcontra@gmail.com",
-	"keywords":"contra,dance,contradance,Portland,Maine",
-	"description":"Organizing monthly contra dances in Portland, Maine",
-	"logo":"https://www.commonfloorcontra.dance/logo.png",
-	"image":"https://www.commonfloorcontra.dance/logo.png",
-	"sameAs":["https://www.commonfloorcontra.dance","https://www.facebook.com/groups/commonfloorcontradance"],
-	"location": {
-		"@type":"Place",
-		"address": {
-			"@type":"PostalAddress",
-			"addressLocality":"Portland",
-			"addressRegion":"ME",
-			"postalCode":"04103",
-			"streetAddress":"400 Deering Avenue",
+		<script type="application/ld+json">
+		{
+			"@type": "WebSite",
+			"url": "https://www.commonfloorcontra.dance",
+			"name": "Common Floor Contra Dance",
+			"keywords":"contra,dance,contradance,Portland,Maine",
+			"image":"https://www.commonfloorcontra.dance/logo.png",
 			"@context": "http://schema.org"
-		},
-		"name":"Temple Beth El",
-		"url":"https://www.tbemaine.org/",
-		"@context": "http://schema.org"
-	},
-	"@context": "http://schema.org"
-}
-</script>
+		}
+		</script>
 
-<script data-goatcounter="https://cfcd.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+		<script type="application/ld+json">
+		{
+			"@type": "Organization",
+			"name":"Common Floor Contra Dance",
+			"url":"https://www.commonfloorcontra.dance",
+			"email":"commonfloorcontra@gmail.com",
+			"keywords":"contra,dance,contradance,Portland,Maine",
+			"description":"Organizing monthly contra dances in Portland, Maine",
+			"logo":"https://www.commonfloorcontra.dance/logo.png",
+			"image":"https://www.commonfloorcontra.dance/logo.png",
+			"sameAs":["https://www.commonfloorcontra.dance","https://www.facebook.com/groups/commonfloorcontradance"],
+			"location": {
+				"@type":"Place",
+				"address": {
+					"@type":"PostalAddress",
+					"addressLocality":"Portland",
+					"addressRegion":"ME",
+					"postalCode":"04103",
+					"streetAddress":"400 Deering Avenue",
+					"@context": "http://schema.org"
+				},
+				"name":"Temple Beth El",
+				"url":"https://www.tbemaine.org/",
+				"@context": "http://schema.org"
+			},
+			"@context": "http://schema.org"
+		}
+		</script>
+
+		<script data-goatcounter="https://cfcd.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 
 	</head>
 	<body>
 		<!--http://localhost:7024/-->
-		<div style="padding:20px" data-source="https://icalprocessor.azurewebsites.net/api/Proxy?url=https://docs.google.com/document/d/e/2PACX-1vQDy-NgLph_BKPmwloVuDQyxuRECjyR-DELQtD6IB-ACExMX8lCq-JPGb6p-9WvRDNHFpMm_P4XGyNf/pub?embedded=true">Loading...</div>
-		<div style="padding:20px; line-height: 1.5" data-source="https://icalprocessor.azurewebsites.net/api/GetNextEvent?url=https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics">Loading...</div>
+		<div style="margin: 20px" data-source="https://icalprocessor.azurewebsites.net/api/Proxy?url=https://docs.google.com/document/d/e/2PACX-1vQDy-NgLph_BKPmwloVuDQyxuRECjyR-DELQtD6IB-ACExMX8lCq-JPGb6p-9WvRDNHFpMm_P4XGyNf/pub?embedded=true">Loading...</div>
 
-		<h1 style="padding:20px">Future Events</h1>
+		<div style="margin: 20px; line-height: 1.5" data-source="https://icalprocessor.azurewebsites.net/api/GetNextEvent?url=https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics">Loading...</div>
+
+		<h1 style="margin-left: 20px ">Future Events</h1>
 
 		<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;mode=AGENDA&amp;height=500&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;
 			src=0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com&amp;
-			ctz=America%2FNew_York" style="border-width: 0; padding: 20px" width="90%" height="500" frameborder="0" scrolling="no"></iframe>
-		<p>
-		<a style="padding:20px" href="https://calendar.google.com/calendar/embed?src=0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com&ctz=America%2FNew_York">Google calendar link</a>
-		<p>
-		<a style="padding:20px" href="https://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics">iCal link</a>
+			ctz=America%2FNew_York" style="border-width: 0; margin: 20px" width="90%" height="500" frameborder="0" scrolling="no"></iframe>
 
-		<h1 style="padding:20px">Other Maine Dances</h1>
+		<div style="display:flex; flex-direction:row">
+			<a style="margin:20px" href="https://calendar.google.com/calendar/embed?src=0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com&ctz=America%2FNew_York">Google calendar link</a>
+			<a style="margin: 20px" href="webcal://calendar.google.com/calendar/ical/0d91bca8eebb5bf2b86e7ea2ef26a3f6f1729ee3c73b87985a0407204e00dbc4%40group.calendar.google.com/public/basic.ics">iCal link</a>
+		</div>
 
-		<div style="padding:20px; line-height: 1.5" data-source="https://icalprocessor.azurewebsites.net/api/GetOtherDances?state=ME">Loading...</div>
+		<h1 style="margin-left: 20px">Other Maine Dances</h1>
+
+		<div style="margin: 20px; line-height: 1.5" data-source="https://icalprocessor.azurewebsites.net/api/GetOtherDances?state=ME">Loading...</div>
 
 		<script>
 			async function loadIn(element) {
