try connect mailchimp

--- a/index.html
+++ b/index.html
@@ -98,5 +98,7 @@
 			const elements = document.querySelectorAll('[data-source]');
 			elements.forEach(element => loadIn(element));
 		</script>
+		
+		<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/a1f02de7f307d697cbefdaf35/78a8b62b45d94910df0e5ec0e.js");</script>
 	</body>
 </html>
